docs: Add JavaDoc documentation to server module files